--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "firebase": "^7.17.1",
     "ionicons": "^5.0.0",
+    "mysql2": "^2.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@capacitor/cli": "2.1.0",
     "@ionic/cli": "6.9.2",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
